--- a/style.css
+++ b/style.css
@@ -1,46 +1,69 @@
-body {
+body{
 	margin: 0;
 	padding: 0;
+	font-family: 'Roboto', sans-serif;
 	font-size: 18px;
 	color: var(--tg-theme-text-color);
-	background: var(--tg-theme-bg-color);
-}
-
-.container {
-	max-width: 390px;
-}
-
-.inner {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 200px 200px 200px;
-}
-
-.img {
-	width: 150px;
-}
-
-.item {
+	background-color: var(--tg-theme-bg-color);
 	text-align: center;
 }
 
-.btn {
+h1{
+	margin-top: 15px;
+}
+
+p{
+	font-weight: 600;
+}
+
+.center{
+	display: flex;
+	justify-content: center;
+}
+
+.container{
+	max-width: 390px;
+}
+
+.inner{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: repeat(3, 200px);
+	grid-gap: 50px;
+}
+
+.img{
+	width: 150px;
+	margin-bottom: -25px;
+}
+
+.item{
+	text-align: center;
+}
+
+.btn{
 	display: inline-block;
-	padding: 10px 20px;
+	padding: 10px 10px;
 	border: none;
 	background: rgb(248, 168, 24);
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 500;
+	transition: background .2s linear;
+}
+
+.btn:hover{
+	background: rgba(48, 233, 128, 0.8);
+}
+
+.added-to-cart{
+	display: inline-block;
+	padding: 10px 10px;
+	border: none;
+	background: rgb(204, 49, 49);
 	border-radius: 10px;
 	color: #fff;
 	text-transform: uppercase;
 	font-weight: 700;
-
 	transition: background .2s linear;
-}
-
-.btn:hover {
-	background: lightgreen;
-}
-
-.usercard {
-	text-align: center;
 }
